--- a/doc/Manual.tex
+++ b/doc/Manual.tex
@@ -17,7 +17,26 @@
            urlcolor=black,
            bookmarksopen=true}
 \begin{document}
-\maketitle
+%----------------------------------------------------------------------------------------
+%	TITLE PAGE
+%----------------------------------------------------------------------------------------
+
+\begin{titlepage} % Suppresses displaying the page number on the title page and the subsequent page counts as page 1
+	
+	\raggedleft % Right align the title page
+	
+	\rule{1pt}{\textheight} % Vertical line
+	\hspace{0.05\textwidth} % Whitespace between the vertical line and title page text
+	\parbox[b]{0.75\textwidth}{ % Paragraph box for holding the title page text, adjust the width to move the title page left or right on the page
+		
+		{\Huge\bfseries MuColLib}\\[2\baselineskip] % Title
+		{\large\textit{The \textbf{Mu}sic \textbf{Col}lection \textbf{Lib}rary tool}}\\
+		{\large\textit{A user manual}}\\[4\baselineskip] % Subtitle or further description
+		{\Large\textsc{steve martin}} % Author name, lower case for consistent small caps
+		\vspace{0.5\textheight} % Whitespace between the title block and the publisher
+	}
+
+\end{titlepage}
 \null
 \vfill
 Copyright \copyright{}  2018,2019  Steve Martin.
