Update Manual.tex, chapter1.tex, and 3 more files... Documentation updates

--- a/doc/chapter2.tex
+++ b/doc/chapter2.tex
@@ -23,7 +23,7 @@ screen (Figure
  \label{fig:New album}
 \end{figure} 
 This is the key to entering all the data into the database.
-
+\newpage
 \subsection{The first entry}
 So, let's get on and enter that first album into our new database.  You will have noticed, from Figure
 \ref{fig:New album},
@@ -45,8 +45,9 @@ drop down is populated with every year from 1900 to the current year (see Figure
  \includegraphics[scale=1]{yearDropdown.png}
  \caption{Year selection}
  \label{fig:Year selection}
-\end{figure} 
-\\For now, just to show off a few points, select
+\end{figure}
+\newpage 
+For now, just to show off a few points, select
 \textbf{\textit{Save}}.
 Now our main screen should look like Figure
 \ref{fig:First album entered},
@@ -78,16 +79,33 @@ text, this will add
 \textbf{\textit{Vinyl}}
 to the drop down 
 \textbf{\textit{Format}}
-menu in future use.
-\\Looking at the main screen it seems we messed up the Artist name (unless the Beatles changed their name in some strange time jump!), this is easily fixed: double click on the artist name and you will see the screen in Figure
-\ref{fig:Edit artist},
+menu for future use.
+
+Looking at the main screen it seems we messed up the Artist name (unless the Beatles changed their name in some strange time jump!), this is easily fixed: double click on the artist name and you will see the screen in Figure
+\ref{fig:Edit artist}.
 \begin{figure}[!h]
  \includegraphics[scale=1]{editartist.png}
  \caption{Edit artist}
  \label{fig:Edit artist}
 \end{figure} 
-
-
+\newpage
+Change the entries to 'Beatles', or 'The Beatles' if you prefer, see Figure
+\ref{fig:Corrected artist}
+\begin{figure}[!h]
+ \includegraphics[scale=1]{editArtist2.png}
+ \caption{Amend artist details}
+ \label{fig:Corrected artist}
+\end{figure} 
+and click 
+\textbf{\textit{Save}}.
+\\You should now see something that looks like Figure
+\ref{fig:Updated start screen}.
+\begin{figure}[!h]
+ \includegraphics[width=\textwidth]{updatedMainScreen.png}
+ \caption{The updated start screen}
+ \label{fig:Updated start screen}
+\end{figure} 
+\newpage
 \section{Artists}
 \section{CSV}
 \label{sect:csv}
