--- a/doc/chapter1.tex
+++ b/doc/chapter1.tex
@@ -1,6 +1,6 @@
 \chapter{Getting Started}
 \section{Installation}
-At this moment in time installation is pretty basic, we have not packaged the program in any way.  So, for now, the best way to install is to download the programs, install them somewhere appropriate, and run them with Python 3.7.
+At this moment in time installation is pretty basic, we have not packaged the program in any way.  So, for now, the best way to install is to download the programs, install them somewhere appropriate, and run them with Python 3.9.
  
 \section{First run}
 When the program is run for the first time it will create a database, because one does not exist, and will present the screen in Figure 
@@ -19,7 +19,7 @@ and you select
 \section{Start screen}
 Once past the first run screen, or if this is not the first time you have run the program, you will see the screen shown in Figure 
 \ref{fig:Start screen}.
-Which, of course, would ordinarily be populated with elements of your music library.
+Which, of course, would ordinarily be populated with elements from your music library.
 \begin{figure}[!h]
   \includegraphics[width=\textwidth]{firstScreen.png}
   \caption{Start screen}
@@ -37,28 +37,27 @@ allows you to select a group of artists whose sort criteria begin with a specifi
   \caption{Artist Selection bar}
   \label{fig:Artist Selection bar}
 \end{figure}
-
+\newpage
 \subsection{The add album button}
 The 
 \textbf{\textit{Add Album}}
-button, as shown in Figure 
-\ref{fig:Add album button},
-allows the adding of album data.  More of which in Section 
-\ref{sect:albums}.
 \begin{figure}[!h]
   \includegraphics[width=\textwidth]{albumButton.png}
   \caption{Add album button}
   \label{fig:Add album button}
 \end{figure}
+button, as shown in Figure 
+\ref{fig:Add album button},
+allows the adding of album data.  More of which in Section 
+\ref{sect:albums}.
 
 \subsection{The close button}
 The 
 \textbf{\textit{Close}}
-button, as shown in Figure 
-\ref{fig:Close button},
-exits the program.
 \begin{figure}[!h]
   \includegraphics[width=\textwidth]{closeButton.png}
   \caption{Close button}
   \label{fig:Close button}
-\end{figure}
+\end{figure}button, as shown in Figure 
+\ref{fig:Close button},
+exits the program.
