--- a/doc/Manual.tex
+++ b/doc/Manual.tex
@@ -50,8 +50,7 @@ Free Documentation License''.
 \tableofcontents
 \newpage
 \chapter{Introduction}
-This is the manual for \textbf{\textit{MuColLib}}, the \textbf{Mu}sic \textbf{Col}lection \textbf{Lib}rary tool. A database geared at providing a comprehensive resource of information about a music collection.  This goes way beyond just recording the Artist and Album title, although it can do that too!
-\\
+This is the manual for \textbf{\textit{MuColLib}}, the \textbf{Mu}sic \textbf{Col}lection \textbf{Lib}rary tool. A database geared to providing a comprehensive resource of information about a music collection.  This goes way beyond just recording the Artist and Album title, although it can do that too!
 
 The list of tables presented in Part II, represent the initial basis upon which this tool is built: there may be changes in the future.
  
