Fix website URL

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2021-10-14	Steve Martin  <kronostar.st4@gmail.com>
+	* Update README.md to point to correct website
+	
 2018-12-02	Steve Martin  <kronostar.st4@gmail.com>
 	* Start of rewrite in Python 3.7 as a desktop app
 
