Update python development environment, and fix ChangeLog

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 2021-10-14	Steve Martin  <kronostar.st4@gmail.com>
 	* Update README.md to point to correct website
 	
-2021-10-11  steve  <steve@brian.roundabout.int>
+2021-10-11  steve  <kronostar.st4@gmail.com>
 	* src/dbimport.py: Fixes for 'is', 'is not' changes in Python 3.8
 	* src/crud.py: Fixes for 'is', 'is not' changes in Python 3.8
 
