--- a/NEWS
+++ b/NEWS
@@ -10,3 +10,4 @@ This is the NEWS file, get all the latest here!
 2018/12/02	Rewrite as a Python 3.7 Desktop App with SQLite
 			Placed under 3-clause BSD license
 2019/11/06	Release version 1.0
+2021/10/14	Now python 3.9
