--- a/doc/Manual.tex
+++ b/doc/Manual.tex
@@ -20,34 +20,36 @@
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
-
 \begin{titlepage} % Suppresses displaying the page number on the title page and the subsequent page counts as page 1
-	
-	\raggedleft % Right align the title page
-	
+	\raggedleft
 	\rule{1pt}{\textheight} % Vertical line
 	\hspace{0.05\textwidth} % Whitespace between the vertical line and title page text
 	\parbox[b]{0.75\textwidth}{ % Paragraph box for holding the title page text, adjust the width to move the title page left or right on the page
-		
 		{\Huge\bfseries MuColLib}\\[2\baselineskip] % Title
 		{\large\textit{The \textbf{Mu}sic \textbf{Col}lection \textbf{Lib}rary tool}}\\
 		{\large\textit{A user manual}}\\[4\baselineskip] % Subtitle or further description
 		{\Large\textsc{steve martin}} % Author name, lower case for consistent small caps
 		\vspace{0.5\textheight} % Whitespace between the title block and the publisher
 	}
-
 \end{titlepage}
+\thispagestyle{empty}
 \null
 \vfill
-Copyright \copyright{}  2018,2019,2021  Steve Martin.
+\bigskip
+\begin{center}
+Copyright \copyright{} 2018,2019,2021  Steve Martin.\\
+\end{center}
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3
 or any later version published by the Free Software Foundation;
 with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 A copy of the license is included in the section entitled ``GNU
 Free Documentation License''.
+\bigskip
 \frontmatter
 \tableofcontents
+\listoffigures
+\listoftables
 \newpage
 \chapter{Introduction}
 This is the manual for \textbf{\textit{MuColLib}}, the \textbf{Mu}sic \textbf{Col}lection \textbf{Lib}rary tool. A database geared to providing a comprehensive resource of information about a music collection.  This goes way beyond just recording the Artist and Album title, although it can do that too!
@@ -63,6 +65,5 @@ The list of tables presented in Part II, represent the initial basis upon which 
 \include{tables}
 \part{Licenses}
 \include{fdl}
-\newpage
 \include{3ClauseBsd}
 \end{document}
