--- a/doc/fdl.tex
+++ b/doc/fdl.tex
@@ -1,23 +1,17 @@
-\chapter*{\rlap{GNU Free Documentation License}}
+\chapter*{GNU Free Documentation License}
 \phantomsection
 \addcontentsline{toc}{chapter}{GNU Free Documentation License}
-%\label{label_fdl}
+\begin{center}
+Version 1.3, 3 November 2008
 
- \begin{center}
+Copyright \copyright{} 2000, 2001, 2002, 2007, 2008  Free Software Foundation, Inc.
 
-       Version 1.3, 3 November 2008
-
-
- Copyright \copyright{} 2000, 2001, 2002, 2007, 2008  Free Software Foundation, Inc.
- 
- \bigskip
- 
+\bigskip
      \texttt{<http://fsf.org/>}
-  
- \bigskip
+\bigskip
  
- Everyone is permitted to copy and distribute verbatim copies
- of this license document, but changing it is not allowed.
+Everyone is permitted to copy and distribute verbatim copies
+of this license document, but changing it is not allowed.
 \end{center}
 
 
@@ -530,7 +524,7 @@ license notices just after the title page:
 
 \bigskip
 \begin{quote}
-    Copyright \copyright{}  YEAR  YOUR NAME.
+    Copyright \copyright{}  YEAR  YOUR NAME.\\
     Permission is granted to copy, distribute and/or modify this document
     under the terms of the GNU Free Documentation License, Version 1.3
     or any later version published by the Free Software Foundation;
