--- a/doc/Manual.tex
+++ b/doc/Manual.tex
@@ -36,9 +36,7 @@
 \null
 \vfill
 \bigskip
-\begin{center}
-Copyright \copyright{} 2018,2019,2021  Steve Martin.\\
-\end{center}
+\noindent Copyright \copyright{} 2018,2019,2021  Steve Martin.\\
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3
 or any later version published by the Free Software Foundation;
